Index By @YourS4nty

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@
         <p>
             Hello, I'm <span style="color: #60caed;">Santiago Gonzalez</span>, a
             passionate web and mobile app developer devoted to crafting digital
-            experiences. My proficiency spans <span style="color: #ecb998;"
+            experiences. My proficiency spans <span style="color: #ef6629;"
                 >HTML</span
             >, <span style="color: #90d0ee;">CSS</span>, and <span
                 style="color: #fff5b6;">JS</span
