--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ const { title } = Astro.props;
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/My-Logo.svg" />
-		<meta name="generator" content={Astro.generator} />
+		<meta name="generator" content="YourS4nty's Live" />
 		<title>{title}</title>
 	</head>
 	<body>
