Index By @YourS4nty

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ import Footer from "../components/Footer.astro";
 		<Nav />
 		<main id="Main">
 			<section class="Me">
-				<img src="/Me.jpeg" alt="YourS4nty" />
+				<img src="/Me.jpg" alt="YourS4nty" />
 				<div>
 					<h1>Hi, I'm Santiago Gonzalez</h1>
 					<p>
